--- a/index.html
+++ b/index.html
@@ -155,6 +155,151 @@
     </div>
   </div>
 
+  <div class="container-fluid">
+    <div class="container pt-3">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="bg-light">
+            <p class="p-3"><i class="bi bi-exclamation-triangle-fill"></i> Please do not share your PIN/OTP to someone! ACLEDA Bank staff will never call you asking for PIN/OTP or doing any transactions. <a href=""> Read more...</a></p>
+          </div>
+        </div>
+      </div>
+    </div>    
+  </div>
+  <div class="container ">
+    <!-- <div class="row justify-content-between" >
+      <div class="col-md-6">
+        <a href="">
+          <img class="" src="image/code-of-conduct.jpg" alt="" width="500" height="500">
+          <p class="text-center">Read More</p>
+        </a>
+      </div>
+      <div class="col-md-6 ">
+        <a href="" class="justify-content-end">
+          <img class="" src="image/ps_credit1-eng.jpg" alt="" width="500" height="500" >
+          <p class="text-center">Read More</p>
+        </a>
+      </div>
+    </div> -->
+
+
+
+    <div class="row justify-content-between">
+      <div class="col-md-6">
+        <div class="row d-flex flex-column justify-content-between" >
+          <div class="col-md  ">
+            <a href="">
+              <img class="rounded float-start" src="image/code-of-conduct.jpg" alt="" width="500" height="500">
+              <p class="">Read More</p>
+            </a>
+          </div>
+          <div class="col-md   ">
+            <a href="" class="">
+              <img class="rounded float-start" src="image/ps_ebeshop1-eng.jpg" alt="" width="500" height="500" >
+              <p class="">Read More</p>
+            </a>
+          </div>
+          <div class="col-md   ">
+            <a href="" class="">
+              <img class="rounded float-start" src="image/special-offer4-eng.jpg" alt="" width="500" height="500" >
+              <p class="">Read More</p>
+            </a>
+          </div>
+          <div class="col-md   ">
+            <a href="" class="">
+              <img class="rounded float-start" src="image/special-offer5-eng.jpg" alt="" width="500" height="500" >
+              <p class="">Read More</p>
+            </a>
+          </div>
+          <div class="col-md   ">
+            <a href="" class="">
+              <img class="rounded float-start" src="image/info-202202281-eng.jpg" alt="" width="500" height="500" >
+              <p class="">Read More</p>
+            </a>
+          </div>
+          <div class="col-md   ">
+            <a href="" class="">
+              <img class="rounded float-start" src="image/ps_productupdate1-eng.jpg" alt="" width="500" height="500" >
+              <p class="">Read More</p>
+            </a>
+          </div>
+          <div class="col-md   ">
+            <a href="" class="">
+              <img class="rounded float-start" src="image/special-offer1-eng.jpg" alt="" width="500" height="500" >
+              <p class="">Read More</p>
+            </a>
+          </div>
+          <div class="col-md   ">
+            <a href="" class="">
+              <img class="rounded float-start" src="image/ps_ebmobiletopup1-eng.jpg" alt="" width="500" height="500" >
+              <p class="">Read More</p>
+            </a>
+          </div>
+          <div class="col-md   ">
+            <a href="" class="">
+              <img class="rounded float-start" src="image/md_ln202110251-eng.jpg" alt="" width="500" height="500" >
+              <p class="">Read More</p>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="row d-flex flex-column justify-content-between" >
+          <div class="col-md">
+            <a href="">
+              <img class="rounded float-end" src="image/info-202109131-eng.jpg" alt="" width="500" height="500">
+              <p class="text-center">Read More</p>
+            </a>
+          </div>
+          <div class="col-md ">
+            <a href="" class="justify-content-end">
+              <img class="rounded float-end" src="image/md_ln202110251-eng.jpg" alt="" width="500" height="500" >
+              <p class="text-center">Read More</p>
+            </a>
+          </div>
+          <div class="col-md ">
+            <a href="" class="justify-content-end">
+              <img class="rounded float-end" src="image/ps_ebpayband1-eng.jpg" alt="" width="500" height="500" >
+              <p class="text-center">Read More</p>
+            </a>
+          </div>
+          <div class="col-md ">
+            <a href="" class="justify-content-end">
+              <img class="rounded float-end" src="image/info-202203011-eng.jpg" alt="" width="500" height="500" >
+              <p class="text-center">Read More</p>
+            </a>
+          </div>
+          <div class="col-md ">
+            <a href="" class="justify-content-end">
+              <img class="rounded float-end" src="image/ps_credit1-eng.jpg" alt="" width="500" height="500" >
+              <p class="text-center">Read More</p>
+            </a>
+          </div>
+          <div class="col-md ">
+            <a href="" class="justify-content-end">
+              <img class="rounded float-end" src="image/ps_ebvirtualcard1-eng.jpg" alt="" width="500" height="500" >
+              <p class="text-center">Read More</p>
+            </a>
+          </div>
+          <div class="col-md ">
+            <a href="" class="justify-content-end">
+              <img class="rounded float-end" src="image/ps_ebeshop1-eng.jpg" alt="" width="500" height="500" >
+              <p class="text-center">Read More</p>
+            </a>
+          </div>
+          <div class="col-md ">
+            <a href="" class="justify-content-end">
+              <img class="rounded float-end" src="image/special-offer1-eng.jpg" alt="" width="500" height="500" >
+              <p class="text-center">Read More</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+
 
 
 
