--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
     <!--Bootsrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
 
 
 
-<body>
+<body >
+  <div id="loader" class="loader">
+    <div class="load">
+      <img src="image/logo.png" alt="" width="270" >
+    </div>
+  </div>
   <header class="position-relative">
     <div class="header container-fluid">
-      <div id="navlogo" class="container-fluid bg-dark ">
+      <div id="navlogo" class="container-fluid">
         <nav class="container d-flex justify-content-between">
           <div>
             <a class="navbar-brand" href="#">
