--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <title></title>
+    <meta name="keywords" 
+         content="KEYWORD1 KEYWORD2 KEYPHRASE1 etc. 
+         about 30 to 40 unique words">
+
+    <meta name="description" 
+         content="An accurate, keyword-rich description 
+         about 150 characters">
         
 
     <!-- Fontawesome -->
@@ -195,114 +203,163 @@
     <div class="row justify-content-between">
       <div class="col-md-6">
         <div class="row d-flex flex-column justify-content-between" >
+
           <div class="col-md  ">
-            <a href="">
-              <img class="rounded float-start" src="image/code-of-conduct.jpg" alt="" width="500" height="500">
-              <p class="">Read More</p>
-            </a>
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/ps_ebeshop1-eng.jpg" alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
-          <div class="col-md   ">
-            <a href="" class="">
-              <img class="rounded float-start" src="image/ps_ebeshop1-eng.jpg" alt="" width="500" height="500" >
-              <p class="">Read More</p>
-            </a>
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/code-of-conduct.jpg" alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
-          <div class="col-md   ">
-            <a href="" class="">
-              <img class="rounded float-start" src="image/special-offer4-eng.jpg" alt="" width="500" height="500" >
-              <p class="">Read More</p>
-            </a>
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/ps_ebeshop1-eng.jpg" alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
-          <div class="col-md   ">
-            <a href="" class="">
-              <img class="rounded float-start" src="image/special-offer5-eng.jpg" alt="" width="500" height="500" >
-              <p class="">Read More</p>
-            </a>
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/special-offer4-eng.jpg" alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
-          <div class="col-md   ">
-            <a href="" class="">
-              <img class="rounded float-start" src="image/info-202202281-eng.jpg" alt="" width="500" height="500" >
-              <p class="">Read More</p>
-            </a>
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/special-offer5-eng.jpg" alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
-          <div class="col-md   ">
-            <a href="" class="">
-              <img class="rounded float-start" src="image/ps_productupdate1-eng.jpg" alt="" width="500" height="500" >
-              <p class="">Read More</p>
-            </a>
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/info-202202281-eng.jpg" alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
-          <div class="col-md   ">
-            <a href="" class="">
-              <img class="rounded float-start" src="image/special-offer1-eng.jpg" alt="" width="500" height="500" >
-              <p class="">Read More</p>
-            </a>
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/ps_productupdate1-eng.jpg" alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
-          <div class="col-md   ">
-            <a href="" class="">
-              <img class="rounded float-start" src="image/ps_ebmobiletopup1-eng.jpg" alt="" width="500" height="500" >
-              <p class="">Read More</p>
-            </a>
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/special-offer1-eng.jpg" alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
-          <div class="col-md   ">
-            <a href="" class="">
-              <img class="rounded float-start" src="image/md_ln202110251-eng.jpg" alt="" width="500" height="500" >
-              <p class="">Read More</p>
-            </a>
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/ps_ebmobiletopup1-eng.jpg" alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
+
         </div>
       </div>
+      <!-- ************************************************************************************************* -->
       <div class="col-md-6">
         <div class="row d-flex flex-column justify-content-between" >
-          <div class="col-md">
-            <a href="">
-              <img class="rounded float-end" src="image/info-202109131-eng.jpg" alt="" width="500" height="500">
-              <p class="text-center">Read More</p>
-            </a>
+
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/info-202109131-eng.jpg" alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
-          <div class="col-md ">
-            <a href="" class="justify-content-end">
-              <img class="rounded float-end" src="image/md_ln202110251-eng.jpg" alt="" width="500" height="500" >
-              <p class="text-center">Read More</p>
-            </a>
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/md_ln202110251-eng.jpg " alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
-          <div class="col-md ">
-            <a href="" class="justify-content-end">
-              <img class="rounded float-end" src="image/ps_ebpayband1-eng.jpg" alt="" width="500" height="500" >
-              <p class="text-center">Read More</p>
-            </a>
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/ps_ebpayband1-eng.jpg " alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
-          <div class="col-md ">
-            <a href="" class="justify-content-end">
-              <img class="rounded float-end" src="image/info-202203011-eng.jpg" alt="" width="500" height="500" >
-              <p class="text-center">Read More</p>
-            </a>
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/info-202203011-eng.jpg " alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
-          <div class="col-md ">
-            <a href="" class="justify-content-end">
-              <img class="rounded float-end" src="image/ps_credit1-eng.jpg" alt="" width="500" height="500" >
-              <p class="text-center">Read More</p>
-            </a>
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/ps_credit1-eng.jpg " alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
-          <div class="col-md ">
-            <a href="" class="justify-content-end">
-              <img class="rounded float-end" src="image/ps_ebvirtualcard1-eng.jpg" alt="" width="500" height="500" >
-              <p class="text-center">Read More</p>
-            </a>
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/ps_ebvirtualcard1-eng.jpg " alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
-          <div class="col-md ">
-            <a href="" class="justify-content-end">
-              <img class="rounded float-end" src="image/ps_ebeshop1-eng.jpg" alt="" width="500" height="500" >
-              <p class="text-center">Read More</p>
-            </a>
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/ps_ebeshop1-eng.jpg" alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
-          <div class="col-md ">
-            <a href="" class="justify-content-end">
-              <img class="rounded float-end" src="image/special-offer1-eng.jpg" alt="" width="500" height="500" >
-              <p class="text-center">Read More</p>
-            </a>
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/md_ln202110251-eng.jpg" alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
           </div>
+          <div class="col-md  ">
+            <div class="box-img">
+              <a href="">
+                <img class="rounded" src="image/ps_ebvirtualcard5-eng.jpg" alt="" width="500" height="500" >
+              </a>
+            </div>
+            <p class="start"><a href=""> Read More </a></p>
+          </div>
+
+
         </div>
       </div>
+
     </div>
 
 
