--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <title></title>
+    <title>ACLEDA BANK</title>
     <meta name="keywords" 
          content="KEYWORD1 KEYWORD2 KEYPHRASE1 etc. 
          about 30 to 40 unique words">
@@ -210,7 +210,7 @@
                 <img class="rounded" src="image/ps_ebeshop1-eng.jpg" alt="" width="500" height="500" >
               </a>
             </div>
-            <p class="start"><a href=""> Read More </a></p>
+            <p class="text-center"><a class="center " href=""> Read More </a></p>
           </div>
           <div class="col-md  ">
             <div class="box-img">
